general updates to the template to test in the editor

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -16,7 +16,32 @@
 // 1. #Single Product
 // -------------------------------
 
-// No styles here...
+// Product Item
+.product-listing__product-content {
+    text-align:center;
+    margin-top:10px;
+}
+
+.product-listing__listing-footer {
+    text-align:center;
+}
+
+.product__product-article {
+    text-align:center;
+}
+
+.product__product-attributes a {
+    color: lighten(@link-color,20%);
+}
+
+.product__product-actions form {
+    padding:0;
+    margin:20px 0px;
+}
+
+.basket-summary__quantity-minus, .basket-summary__quantity-plus {
+    vertical-align: top;
+}
 
 
 
@@ -43,8 +68,6 @@
         margin-bottom: 4%;
     }
 }
-
-
 
 
 // -----------------------------
@@ -95,8 +118,10 @@
 
 
 // -------------------------------
-// 4. #Basket Widget
+// 4. #Basket Summary
 // -------------------------------
 
-// No styles here...
+.basket-summary__summary-section {
+    text-align:center;
+}
 
