--- a/less/theme.less
+++ b/less/theme.less
@@ -40,6 +40,7 @@
 	// Lighten paragraph & link elements
 	p, a {
 		color: @font-swatch9-color;
+		padding:0;
 	}
 	// Reset Twitter feed styles
 	.twitter-feed {
