--- a/less/widgets.less
+++ b/less/widgets.less
@@ -233,6 +233,11 @@
     min-height: 400px;
 }
 
+.slideshow__slideshow-controls, .slideshow__caption {
+    text-align:center;
+    margin-top:15px;
+}
+
 
 // Slideshow Images
 // ----------------
@@ -379,7 +384,7 @@ input.input[type=email],input.input[type=search], .contact-form__textarea {
 // Body
 .widget__twitter {
     background-color:@color-swatch1;
-    border:3px solid @color-swatch7;
+    border:1px solid @color-swatch7;
     padding:40px 60px 15px;
 }
 
