--- a/less/plugins/plugin-blog.less
+++ b/less/plugins/plugin-blog.less
@@ -41,6 +41,10 @@
 	text-align:center;
 }
 
+.blog-post__post-attributes a, .blog-post-list__post-excerpt a {
+	color: lighten(@link-color,20%);
+}
+
 // Blog Post List Footer
 .blog-post__post-footer {
 	border: 1px solid @color-swatch7;
