--- a/less/plugins/plugin-menu.less
+++ b/less/plugins/plugin-menu.less
@@ -6,6 +6,9 @@
 .widget__menusections {
 	border:1px solid @color-swatch7;
 	text-align:center;
+    a {
+        color: lighten(@link-color,20%);
+    }
 }
 
 // Menu Content
