adding background color and background color hover in the metadata on colour swatch 6 to validate the theme

--- a/less/plugins/plugin-blog.less
+++ b/less/plugins/plugin-blog.less
@@ -42,7 +42,7 @@
 }
 
 .blog-post__post-attributes a, .blog-post-list__post-excerpt a {
-	color: lighten(@link-color,20%);
+	color: lighten(@font-swatch5-color,20%);
 }
 
 // Blog Post List Footer
