--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -31,7 +31,7 @@
 }
 
 .product__product-attributes a {
-    color: lighten(@link-color,20%);
+    color: lighten(@font-swatch5-color,20%);
 }
 
 .product__product-actions form {
