--- a/less/plugins/plugin-menu.less
+++ b/less/plugins/plugin-menu.less
@@ -7,7 +7,7 @@
 	border:1px solid @color-swatch7;
 	text-align:center;
     a {
-        color: lighten(@link-color,20%);
+        color: lighten(@font-swatch5-color,20%);
     }
 }
 
