--- a/less/widgets.less
+++ b/less/widgets.less
@@ -108,14 +108,7 @@
 // Feature Content
 // ---------------
 
-.feature-widget__button {
-    border:1px solid @color-swatch1;
-    background-color:transparent;
-    padding:8px 30px;
-    &:hover {
-        border:1px solid transparent;
-    }
-}
+
 
 // -----------------------------
 // 5.  #Images
@@ -280,19 +273,25 @@ button, .button {
     color:@color-swatch4;
 }
 
+.feature-widget__button {
+    border:1px solid @color-swatch1;
+    background-color:transparent;
+    padding:8px 30px;
+    color:@font-swatch9-color;
+    &:hover {
+        border:1px solid transparent;
+    }
+}
+
 //  8.2  #TWEET
 //  --------------
 
 
-//  8.3  #STANDARD
+//  8.3  #DROPBOX
 //  --------------
 
 
-//  8.4  #DROPBOX
-//  --------------
-
-
-//  8.5  #CLICK TO CALL
+//  8.4  #CLICK TO CALL
 //  --------------
 
 
