general changes and styling to template, new feature added to default page

--- a/less/theme.less
+++ b/less/theme.less
@@ -13,6 +13,10 @@
 // 1. #Header & Footer
 // -----------------------------
 
+.template-header {
+	margin:0px 2%;
+}
+
 .template-header,
 .template-footer {
 	.flex-vert-center; // Mixin > Flexbox: Vertical Align Center Mixin
