--- a/less/widgets.less
+++ b/less/widgets.less
@@ -44,6 +44,10 @@
     }
 }
 
+.widget__logo {
+    margin-right:10px;
+}
+
 
 // -----------------------------
 // 2.  #Company Name
@@ -109,6 +113,12 @@
 // ---------------
 
 
+// Default Page Feature
+// --------------------------
+
+.default-feature .feature-widget__background-image {
+    height:150px;
+}
 
 // -----------------------------
 // 5.  #Images
