--- a/default.twig
+++ b/default.twig
@@ -2,6 +2,18 @@
 
 {% block content %}
 
+{% include "includes/header.twig" %}
+
+<div class="default-feature">
+	{{widget('feature', 'featuredefault', {
+		"header": "profile", 
+		"defaultBgImg": asset('images/feature-default.jpg'),
+		'positionTopPercentage': '0',
+		'showBtn': false,
+		buttonText: "Lorem Ipsum"
+	})|raw}}
+</div>
+
 <!-- Container -->
 <div class="container">
 
@@ -9,20 +21,6 @@
 	<section class="template-content">
 
 		<!-- Template Widgets -->
-
-		{{widget('logo', 'logo', {"defaultlogo": asset('images/logo.png')})|raw}}
-
-		{{widget('companyname', 'companyname', {"business": "profile"})|raw}}
-
-		{{widget('navigation', 'navigation', {"align":"left"})|raw}}
-
-		{{widget('feature', 'featurehome', {
-			"header": "profile", 
-			"defaultBgImg": asset('images/feature-bg.jpg'),
-			'positionTopPercentage': '0',
-			'showBtn': true,
-			buttonText: "Lorem Ipsum"
-		})|raw}}
 		
 		<!-- End Template Widgets -->
 
@@ -34,5 +32,7 @@
 
 </div>
 <!-- End Container -->
+
+{% include "includes/footer.twig" %}
 
 {% endblock %}
