--- a/less/layout-header.less
+++ b/less/layout-header.less
@@ -41,7 +41,7 @@
 	-webkit-align-items: center;
 	-ms-flex-align: center;
 	align-items: center;
-
+	width:100%;
 	// Layout
 	padding: (@bk-header-vertical-spacing / 2) 0;
 }
@@ -129,7 +129,6 @@
 	-webkit-align-self: auto;
 	-ms-flex-item-align: auto;
 	align-self: auto;
-
 	@media @tablet {
 		-webkit-order: 3;
 		-ms-flex-order: 3;
