general update and to commit to test in the editor

--- a/less/layout-header.less
+++ b/less/layout-header.less
@@ -48,7 +48,7 @@
 
 
 
-.widget.logo {
+.widget__logo {
 	// Flex child
 	-webkit-box-ordinal-group: 1;
 	-moz-box-ordinal-group: 1;
@@ -85,7 +85,7 @@
 
 
 
-.widget.companyname {
+.widget__companyname {
 	// Flex child
 	-webkit-box-ordinal-group: 1;
 	-moz-box-ordinal-group: 1;
@@ -114,7 +114,7 @@
 
 
 
-.widget.extendednavigation {
+.widget__extendednavigation {
 	// Flex child
 	-webkit-box-ordinal-group: 1;
 	-moz-box-ordinal-group: 1;
