--- a/less/navigation.less
+++ b/less/navigation.less
@@ -30,7 +30,6 @@
 .navigation-item {
 	@media @tablet {
 		width: 100%;
-		border-top: 1px solid darken(@color-swatch2,8%);
 	}
 }
 
@@ -81,7 +80,7 @@
 		background-color: @color-swatch1;
 		position: relative;
 		top: 0;
-		background-color: darken(@color-swatch2, 2%);
+		background-color: @color-swatch3;
 		.navigation-item:hover & {
 			display: none;
 		}
@@ -90,7 +89,6 @@
 		}
 	}
 }
-
 
 // Collapsible navigation
 // -------------
