--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -18,16 +18,16 @@
 
 // Product Item
 .product-listing__product-content {
-    text-align:center;
-    margin-top:10px;
+    text-align: center;
+    margin-top: 10px;
 }
 
 .product-listing__listing-footer {
-    text-align:center;
+    text-align: center;
 }
 
 .product__product-article {
-    text-align:center;
+    text-align: center;
 }
 
 .product__product-attributes a {
@@ -35,8 +35,8 @@
 }
 
 .product__product-actions form {
-    padding:0;
-    margin:20px 0px;
+    padding: 0;
+    margin: 20px 0px;
 }
 
 .basket-summary__quantity-minus, .basket-summary__quantity-plus {
@@ -121,7 +121,16 @@
 // 4. #Basket Summary
 // -------------------------------
 
+.basket-summary__summary-title {
+    margin-bottom:20px;
+}
+
 .basket-summary__summary-section {
-    text-align:center;
+    text-align: center;
+}
+
+.basket-summary__summary-form {
+    border:0;
+    padding:0;
 }
 
