--- a/layout.twig
+++ b/layout.twig
@@ -33,5 +33,30 @@
 	{% endblock %}
 
     {% include basekit.bodyScript %}
+
+    
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="{{ asset('libs/jquery-1.10.2.min.js')}}"><\/script>')</script>
+
+    	<!-- Nav Menu Script -->
+	<script>
+
+		// Adds 3 empty DIVs for creating the hamburger icon 
+    	$( ".navigation-toggle" ).append( "<div class='bar one'></div><div class='bar two'></div><div class='bar three'></div>" ); 
+
+    	// Toggles class open to display/hide the whole navigation
+    	$( ".navigation-toggle" ).click(function() {
+  			$( ".bk-extendednavigation" ).toggleClass( "open" );
+		});
+
+    	// Togglse class open to display/hide folders
+		$( ".navigation-item.folder" ).each(function() {
+			$( this ).click(function() {
+	  			$( this ).toggleClass( "open" );
+			});	
+		});
+
+	</script>
+
 </body>
 </html>
