--- a/stylesheet.less
+++ b/stylesheet.less
@@ -49,6 +49,9 @@
 .container {
     width: 100%;
     padding: 2%;
+    @media @tablet {
+    	padding:2% 3%;
+    }
 }
 
 
@@ -58,6 +61,6 @@
 // -----------------------------
 
 .template-content {
-	width:960px;
+	width:100%;
 	margin:0px auto;
 }
