--- a/less/plugins/plugin-menu.less
+++ b/less/plugins/plugin-menu.less
@@ -16,6 +16,10 @@
 	text-align:center;
 }
 
+.menu__section-header {
+    margin-top:20px;
+}
+
 .menu__section-title, .menu__item-title, .menu__item-subtitle {
 	    &:after {
         border-top: 1px solid @color-swatch7;
@@ -40,4 +44,11 @@
 // Item Image
 .item-image {
 	background-color: darken(@color-swatch1,5%);
+}
+
+
+// Featured Section
+.menu-section--featured, .menu-item--featured  {
+    border:1px solid @color-swatch7;
+    padding:20px;
 }
