--- a/less/theme.less
+++ b/less/theme.less
@@ -23,9 +23,6 @@
 	min-height: 80px;
 	background-color: @color-swatch1;
 	// Tablet: reduce height
-	@media @tablet {
-		min-height: 150px;
-	}
 }
 
 
@@ -115,7 +112,7 @@ form, .form {
     border: 1px solid @color-swatch7;
     padding: 20px 40px 10px;
     @media @tablet {
-    	padding:10px;
+    	padding:10px 0px;
     }
 }
 
