--- a/less/layout-header.less
+++ b/less/layout-header.less
@@ -44,6 +44,9 @@
 	width:100%;
 	// Layout
 	padding: (@bk-header-vertical-spacing / 2) 0;
+	@media @tablet {
+		display:block;
+	}
 }
 
 
@@ -76,6 +79,7 @@
 		order: 1;
 		text-align: left;
 		margin: (@bk-header-vertical-spacing / 3) 0; 
+		display:block;
 	}
 
 	img, .logo {
@@ -109,6 +113,7 @@
 		-ms-flex-order: 2;
 		order: 2;
 		padding: (@bk-header-vertical-spacing / 3) (@bk-logo-right-spacing / 2);
+		display:block;
 		}
 }
 
@@ -133,9 +138,10 @@
 		-webkit-order: 3;
 		-ms-flex-order: 3;
 		order: 3;
-		margin: 0 (@bk-logo-right-spacing / 2);
+		margin: 0;
 		width: 100%;
 		min-height: @bk-pull-button-height;
+		display:block;
 	}
 }
 
