--- a/less/navigation.less
+++ b/less/navigation.less
@@ -35,6 +35,10 @@
 
 
 // Navigation Link
+.navigation-item .item-name {
+	padding:5px 15px;
+}
+
 .item-name {
 	padding: 16px 20px;
 }
@@ -43,6 +47,12 @@
 // -------------
 .navigation-item.folder {
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+.navigation-item.folder .navigation__item-name {
+	&:hover {
+		color:lighten(@font-swatch4-color,20%);
+	}
 }
 
 .item-name--parent {
@@ -60,6 +70,8 @@
 		@media @tablet {
 			content: "\f054";
 			font-size: 0.8em;
+			height: 31px;
+			margin-top: -2px;
 		}
 		.navigation-item.open & {
 			@media @tablet {
@@ -74,7 +86,10 @@
 }
 
 .navigation-list--children, .default-page .navigation-list--children {
-	border-top: 1px solid darken(@color-swatch2,8%);
+	background-color:@color-swatch3;
+	.navigation__item-name {
+		color:@font-swatch9-color;
+	}
 	@media @tablet {
 		border-top: none;
 		background-color: @color-swatch1;
@@ -132,7 +147,7 @@
 		.bar {
 			width: 100%;
 			height: 4px;
-			background: @color-swatch7;
+			background: @color-swatch3;
 			margin: 4px 0;
 			transition: all 0.3s;
 			backface-visibility: hidden;
