--- a/stylesheet.less
+++ b/stylesheet.less
@@ -47,13 +47,16 @@
 // --------------
 
 .container {
-    width: 100%;
-    padding: 2%;
-    @media @tablet {
-    	padding:2% 3%;
-    }
+	max-width: 1200px;
+	margin: 0 auto;
+	padding: 1% 5%;
+	@media @tablet {
+		padding: 3% 3%;
+	}
+	@media @mobile {
+		padding: 2% 3%;
+	}
 }
-
 
 
 // -----------------------------
@@ -63,4 +66,7 @@
 .template-content {
 	width:100%;
 	margin:0px auto;
+	@media @tablet {
+		width:100%;
+	}
 }
