--- a/less/layout-header.less
+++ b/less/layout-header.less
@@ -2,12 +2,6 @@
 // Respnsive flex header
 // -----------------------------------------------------------------
 
-
-@bk-logo-right-spacing: 10px;
-@bk-header-wrapper-width: 960px;
-@bk-header-vertical-spacing: 20px;
-@bk-pull-button-height: 18px;
-
 // -----------------------------------------------------------------
 // Latest flexbox model
 
@@ -51,7 +45,7 @@
 
 
 
-.widget__logo {
+.logo {
 	// Flex child
 	-webkit-box-ordinal-group: 1;
 	-moz-box-ordinal-group: 1;
@@ -89,7 +83,7 @@
 
 
 
-.widget__companyname {
+.companyname {
 	// Flex child
 	-webkit-box-ordinal-group: 1;
 	-moz-box-ordinal-group: 1;
@@ -119,7 +113,7 @@
 
 
 
-.widget__extendednavigation {
+.extendednavigation {
 	// Flex child
 	-webkit-box-ordinal-group: 1;
 	-moz-box-ordinal-group: 1;
