--- a/less/layout-header.less
+++ b/less/layout-header.less
@@ -37,7 +37,7 @@
 	align-items: center;
 	width:100%;
 	// Layout
-	padding: (@bk-header-vertical-spacing / 2) 0;
+	padding: 20px;
 	@media @tablet {
 		display:block;
 	}
@@ -45,7 +45,7 @@
 
 
 
-.logo {
+.widget__logo {
 	// Flex child
 	-webkit-box-ordinal-group: 1;
 	-moz-box-ordinal-group: 1;
@@ -63,17 +63,17 @@
 
 	// Layout
 	text-align:center;
-	margin: (@bk-header-vertical-spacing / 2) auto;
-	padding: 0 (@bk-logo-right-spacing / 2);
+	margin: auto;
 	max-width: 100%;
-
+	padding: 0 10px 0 0;
 	@media @tablet {
 		-webkit-order: 1;
 		-ms-flex-order: 1;
 		order: 1;
 		text-align: left;
-		margin: (@bk-header-vertical-spacing / 3) 0; 
+		margin: 0; 
 		display:block;
+		padding:0;
 	}
 
 	img, .logo {
@@ -83,7 +83,7 @@
 
 
 
-.companyname {
+.widget__companyname {
 	// Flex child
 	-webkit-box-ordinal-group: 1;
 	-moz-box-ordinal-group: 1;
@@ -98,22 +98,18 @@
 	-webkit-align-self: auto;
 	-ms-flex-item-align: auto;
 	align-self: auto;
-
-	// layout
-	padding: (@bk-header-vertical-spacing / 2) (@bk-logo-right-spacing / 2);
-
 	@media @tablet {
 		-webkit-order: 2;
 		-ms-flex-order: 2;
 		order: 2;
-		padding: (@bk-header-vertical-spacing / 3) (@bk-logo-right-spacing / 2);
+		padding: 10px 0 0 0;
 		display:block;
 		}
 }
 
 
 
-.extendednavigation {
+.widget__extendednavigation {
 	// Flex child
 	-webkit-box-ordinal-group: 1;
 	-moz-box-ordinal-group: 1;
@@ -134,7 +130,7 @@
 		order: 3;
 		margin: 0;
 		width: 100%;
-		min-height: @bk-pull-button-height;
+		min-height: 18px;
 		display:block;
 	}
 }
