class name changes

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -20,7 +20,8 @@
 // Product Item
 .product-listing__product-content {
     text-align: center;
-    margin-top: 10px;
+    border: 1px solid @color-swatch7;
+    padding-top: 10px;
 }
 
 .product-listing__listing-footer {
