--- a/less/plugins/plugin-blog.less
+++ b/less/plugins/plugin-blog.less
@@ -12,7 +12,7 @@
 	display: table;
 }
 
-.blog-post-list__title-link, .blog-post__post-title {	
+.blogpostlist__title-link, .blogpost__post-title {	
     &:after {
         border-top: 1px solid @color-swatch7;
         content: "";
@@ -25,7 +25,7 @@
     }
 }
 
-.blog-post-list__post-image, .blog-post-list__post-content {
+.blogpostlist__post-image, .blogpostlist__post-content {
 	text-align:center;
 }
 
@@ -37,27 +37,27 @@
 }
 
 // Blog Post List Footer
-.blog-post-list__post-footer {
+.blogpostlist__post-footer {
 	border: 1px solid @color-swatch7;
 	padding: 20px 20px 10px;
 	text-align: center;
 }
 
 // Blog Post
-.blog-post__post-content {
+.blogpost__post-content {
 	text-align: center;
 }
 
-.blog-post__post-attributes a, .blog-post-list__post-excerpt a {
+.blogpost__post-attributes a, .blogpostlist__post-excerpt a {
 	color: lighten(@font-swatch5-color,20%);
 }
 
-.blog-post__post-article {
+.blogpost__post-article {
 	padding:0;
 }
 
 // Blog Post List Footer
-.blog-post__post-footer {
+.blogpost__post-footer {
 	border: 1px solid @color-swatch7;
 	padding: 20px 20px;
 	text-align: center;
