--- a/includes/header.twig
+++ b/includes/header.twig
@@ -1,9 +1,15 @@
 <!-- Header -->
 <header class="template-header">
-	<div class="flex-container">
+    <div class="header-wrapper">
+        <div class="header-logo">
             {{widget('logo', 'logo', {"defaultlogo": asset('images/logo.png')})|raw}}
+        </div>
+        <div class="header-companyname">
             {{widget('companyname', 'companyname', {"business": "profile"})|raw}}
-            {{widget('extendednavigation', 'navigationheader', {"align":"right"})|raw}}
+        </div>
+        <div class="header-extendednavigation">
+            {{widget('extendednavigation', 'extendednavigation', {"align":"right"})|raw}}
+        </div>
     </div>
 </header>
 <!-- End Header -->
