--- a/less/plugins/plugin-blog.less
+++ b/less/plugins/plugin-blog.less
@@ -3,6 +3,10 @@
 // -------------------------------------
 
 // Blog Post List
+.blogpostlist__post-header {
+    margin-top: 25px;
+}
+
 .post-content {
 	margin: 20px 0 20px;
 }
@@ -26,7 +30,9 @@
 }
 
 .blogpostlist__post-image, .blogpostlist__post-content {
-	text-align:center;
+	text-align: center;
+    margin: 0px auto;
+    display: table;
 }
 
 .post-article {
@@ -39,8 +45,9 @@
 // Blog Post List Footer
 .blogpostlist__post-footer {
 	border: 1px solid @color-swatch7;
-	padding: 20px 20px 10px;
-	text-align: center;
+    padding: 20px;
+    text-align: center;
+    margin-top: 20px;
 }
 
 // Blog Post
@@ -56,9 +63,17 @@
 	padding:0;
 }
 
+.post-footer .timestamp {
+    margin: 0;
+}
+
 // Blog Post List Footer
 .blogpost__post-footer {
 	border: 1px solid @color-swatch7;
-	padding: 20px 20px;
+	padding: 30px 20px;
 	text-align: center;
+}
+
+.blogpost__sharing-links {
+    margin-top: 15px;
 }
