--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -18,60 +18,93 @@
 // -------------------------------
 
 // Product Item
-.product-listing__product-content {
-    text-align: center;
-    border: 1px solid @color-swatch7;
-    padding-top: 10px;
+.widget__ecomproduct {
+    margin: 20px 0;
+    .clearfix
 }
 
-.product-listing__listing-footer {
-    text-align: center;
+.ecomproduct__legend {
+    padding: 36px 30px 20px;
 }
 
-.product__product-article {
-    text-align: center;
-}
-
-.product__product-attributes a {
-    color: lighten(@font-swatch5-color,20%);
-}
-
-.product__product-actions form {
-    padding: 0;
-    margin: 20px 0px;
-}
-
-.basket-summary__quantity-minus, .basket-summary__quantity-plus {
-    vertical-align: top;
-}
-
-.product__product-images {
-    width:48%;
-    float:left;
-    padding:0 2%;
+.product-content {
+    padding: 0 0 0 2%;
+    display: inline-block;
+    width: 50%;
     @media @tablet {
-        width:100%;
+        width: 100%;
     }
 }
 
-.product-header, 
-.product-body,
-.product-actions {
-    padding-left: 50%;
-    @media @tablet {
-        padding-left: 0;
+.ecomproduct__product-actions {
+    form {
+        padding: 0;
+        width: 100%;
+        height: 189px;
+        @media @mobile {
+            height: 209px;
+        }
     }
 }
 
-.ecom-product-go-to-checkout-btn,
-.basket__basket-toggle {
-    background-color: @color-swatch3;
-    color: @font-swatch8-color;
+.product-images {
+    width: 50%;
+    float: left;
+    padding: 0 2% 0 0;
+    @media @tablet {
+        width: 100%;
+    }
+}
+
+.ecomproduct__image-link {
+    background: no-repeat;
+}
+
+// Product Information
+.ecomproduct__form {
+    background-color: transparent;
+    border: 0;
+    .form-group {
+        margin-bottom: 0;
+    }
+}
+
+.product-attributes {
+    margin: 10px 0;
+    clear: both;
+}
+
+.ecomproduct__category-link,
+.ecomproduct__tag-link {
+    color: @color-swatch2;
+}
+
+.ecomproduct__select-wrap,
+.ecomproduct__select {
+    display: inline-block;
+}
+
+// Basket Buttons
+.ecomproduct__view-basket-wrap {
+    margin-top: -49px;
+    text-align: center;
+}
+
+.js-ecom-product-add-to-cart-btn {
+    float: right;
+    width: 52%;
+    padding: 8px 12px;
+    background-color: @color-swatch4;
+    border: 4px solid darken(@color-swatch4,5%);
     &:hover {
-        background-color: darken(@color-swatch3,10%);
+        background-color: @color-swatch2;
     }
 }
 
+.ecom-product-go-to-checkout-btn {
+    padding: 12px 12px;
+    width: 48%;
+}
 // -----------------------------
 // 2. #Product List
 // -----------------------------
@@ -95,6 +128,9 @@
     }
 }
 
+.product-item-details {
+    text-align: center;
+}
 
 // -----------------------------
 // 3. #Basket Widget
@@ -158,6 +194,15 @@
 .basket-summary__summary-form {
     border:0;
     padding:0;
+}
+
+.summary-table .cell {
+    padding: 25px 12px;
+}
+
+.button--quantity {
+    background-color: @color-swatch1;
+    border: 1px solid @color-swatch7;
 }
 
 // -------------------------------
