--- a/less/widgets.less
+++ b/less/widgets.less
@@ -50,7 +50,42 @@
     }
 }
 
+// Header Logo Flexbox
 
+.header-logo {
+    // Flex child
+    -webkit-box-ordinal-group: 1;
+    -moz-box-ordinal-group: 1;
+    -webkit-order: 1;
+    -ms-flex-order: 1;
+    order: 1;
+    -webkit-box-flex: 0;
+    -moz-box-flex: 0;
+    -webkit-flex: 0 0 auto;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+
+    // Layout
+    text-align:center;
+    max-width: 100%;
+
+    @media @tablet {
+        -webkit-order: 1;
+        -ms-flex-order: 1;
+        order: 1;
+        text-align: left;
+        margin: (@bk-header-vertical-spacing / 3) 0; 
+        display:block;
+        padding: 10px 0px;
+    }
+
+    img, .logo {
+        line-height: 0;
+    }
+}
 
 
 // -----------------------------
@@ -74,12 +109,63 @@
     }
 }
 
+// Header  Companyname Flexbox
 
+.header-companyname {
+    // Flex child
+    -webkit-box-ordinal-group: 1;
+    -moz-box-ordinal-group: 1;
+    -webkit-order: 2;
+    -ms-flex-order: 2;
+    order: 2;
+    -webkit-box-flex: 10;
+    -moz-box-flex: 10;
+    -webkit-flex: 10 10 auto;
+    -ms-flex: 10 10 auto;
+    flex: 10 10 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+    @media @tablet {
+        -webkit-order: 2;
+        -ms-flex-order: 2;
+        order: 2;
+        display:block;
+        margin: 0.5em 0;
+        text-align: center;
+    }
+}
 
 
 // -----------------------------
 // 3.  #Navigation
 // -----------------------------
+
+// Header Extended Navigation
+
+.header-extendednavigation {
+    // Flex child
+    -webkit-box-ordinal-group: 1;
+    -moz-box-ordinal-group: 1;
+    -webkit-order: 4;
+    -ms-flex-order: 4;
+    order: 4;
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+    @media @tablet {
+        -webkit-order: 4;
+        -ms-flex-order: 4;
+        order: 4;
+        margin: 0;
+        width: 100%;
+    }
+}
 
 // Folder Item Parent: Gives arrow 
 .item-name--parent:after {
@@ -172,7 +258,11 @@
 // Feature Button
 // ---------------
 
-.feature__button { margin: 10px 0 0 0; }
+.feature__button { 
+    margin: 10px 0 0 0; 
+    border: 1px solid @color-swatch1;
+    color: @font-swatch8-color;
+}
 
 // Default Page Feature
 // --------------------------
@@ -372,7 +462,7 @@
 // Navigation Buttons
 .slide-navigation {
     position: absolute;
-    top: 180px;
+    top: 140px;
     width: 100%;
 }
 
@@ -388,13 +478,24 @@
     display:none;
 }
 
-.button--pagination.responsiveslideshow__button {
-    vertical-align: top;
-    padding: 10px;
-}
-
 .control-text {
     display:none;
+}
+
+// Slideshow Pagination
+.responsiveslideshow__pagination-list {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.button--pagination.responsiveslideshow__button {
+    vertical-align: top;
+    padding: 5px 20px;
+}
+
+.responsiveslideshow .pagination-item.selected .button--pagination {
+    background-color: @color-swatch3;
+    color: @font-swatch8-color;
 }
 
 
@@ -414,16 +515,16 @@ button, .button {
     color:@color-swatch4;
 }
 
-.feature-widget__button {
-    border:1px solid @color-swatch1;
-    background-color:transparent;
-    padding:8px 30px;
-    color:@font-swatch9-color;
+.feature__button {
+    border: 1px solid @color-swatch1;
+    background-color: transparent;
+    padding: 8px 30px;
+    color: @font-swatch9-color;
+        margin: 10px 0 0 0; 
     &:hover {
-        border:1px solid transparent;
+        border: 1px solid transparent;
     }
 }
-
 
 //  8.2  #TWEET
 //  --------------
@@ -436,6 +537,18 @@ button, .button {
 //  8.4  #CLICK TO CALL
 //  --------------
 
+.companyphone__phone-number-link {
+    &:hover {
+        text-decoration: none;
+    }   
+}
+
+.phone-number-link {
+    @media @mobile {
+        color: @font-swatch9-color;
+        background-color: @color-swatch3;
+    }
+}
 
 //  8.5  #PAYPAL
 //  --------------
@@ -483,16 +596,9 @@ input.input[type=email],input.input[type=search], .contact-form__textarea {
 // 10.  #Signup Form
 // -----------------------------
 
-.signup-form__legend {
+.signupform__legend {
     padding:0;
 }
-
-.signup-form__input {
-    margin:0px auto;
-    display:table;
-}
-
-
 
 
 // -----------------------------
@@ -536,14 +642,14 @@ input.input[type=email],input.input[type=search], .contact-form__textarea {
 
 // Body
 .twitter {
-    background-color:@color-swatch1;
-    border:1px solid @color-swatch7;
-    padding:40px 60px 15px;
+    background-color: @color-swatch1;
+    border: 1px solid @color-swatch7;
+    padding: 30px 30px 5px;
     @media @tablet {
-        padding:20px;
+        padding: 20px;
     }
     @media @mobile {
-        text-align:center;
+        text-align: center;
     }
 }
 
@@ -554,12 +660,12 @@ input.input[type=email],input.input[type=search], .contact-form__textarea {
 // Content
 
 .twitter__avatar {
-    display:inline-block;
-    margin-right:20px;
+    display: inline-block;
+    margin-right: 20px;
     @media @mobile {
-        display:block;
-        margin-right:0;
-        margin-bottom:20px;
+        display: block;
+        margin-right: 0;
+        margin-bottom: 20px;
     }
 }
 
@@ -579,12 +685,12 @@ input.input[type=email],input.input[type=search], .contact-form__textarea {
 
 .twitter__tweet-item {
     border-bottom: 1px solid @color-swatch7;
-    padding:0px 0px 40px 0px;
-    margin:0px 0px 40px 0px;
+    padding: 0 0 30px 0;
+    margin: 0 0 30px 0;
     &:last-child {
         border-bottom:0;
-        padding:0px 0px 7px 0px;
-        margin:0px 0px 7px 0px;
+        padding: 0 0 7px 0;
+        margin: 0 0 7px 0;
     }
 }
 
